# vocab-analyzer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  need.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.bat  start.sh  user-stories-index.md  user-story-0-数据准备.md  user-story-1-基础词汇分析.md  user-story-2-格式化输出.md  user-story-3-词组识别.md  user-story-4-中文释义.md  user-story-5-例句提取.md
.specify/: 100-percent-completion-certificate.md  all-tasks-completion-summary.md  implementation-plan.md  mvp-implementation-complete.md  phase-1-implementation-summary.md  phase-2-implementation-summary.md  phase-5-implementation-summary.md  project-completion-report.md  story-0-clarifications.md  story-0-data-preparation-spec.md  story-0-execution-summary.md  tasks.md  user-stories-specification.md  web-frontend-specification.md
.specify/memory/: constitution.md
config/: default_config.yaml
data/: DATA_VALIDATION_REPORT.md  README.md  cefr_definitions.json  data_statistics.md  translation_config.yaml  ui_strings.json
data/dictionaries/: README.md
data/mappings/: cefr_ielts_mapping.json
data/phrases/: phrasal_verbs.csv
data/translation_models/: .gitignore
data/vocabularies/: cefr_wordlist.csv
docs/: EXAMPLES.md  QUICK_REFERENCE.md  README.md  USER_GUIDE.md  comprehensive-user-stories.md
scripts/: prepare_data.py  setup_translation.py  validate_data.py
specs/001-web-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-bilingual-ui-translation/: IMPLEMENTATION_REPORT.md  NEXT-CYCLE.md  PROGRESS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ui-ux-optimization/: data-model.md  implementation-summary.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  testing-validation.md
tests/: conftest.py
(+94 files in other folders)
